--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_blue: ^0.8.0
+    #git: https://github.com/boskokg/flutter_blue
 
 dev_dependencies:
   flutter_test:
